--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -121,7 +121,7 @@ limitations under the License. -->
         app:layout_constraintTop_toBottomOf="@+id/input_text"/>
 
     <TextView
-        android:id="@+id/tv_price"
+        android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
